# imgc-core

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  setup.sh  test.sh  tests.sh
.ci/: Jenkinsfile  sourcelist.txt
.ci/Dockerfiles/: Build  Local
assets/: out.json  test-solutions.json  test.js
example/: example_tools.hpp  sdl_example.cpp  torasu-imgc-example.cpp
include/torasu/mod/imgc/: Dcropdata.hpp  Dgraphics.hpp  FFmpegLogger.h  MediaDecoder.hpp  MediaEncoder.hpp  RImgFile.hpp  Ralign2d.hpp  Rauto_align2d.hpp  Rcolor.hpp  Rcropdata.hpp  Rcropdata_combined.hpp  Rdirectional_blur.hpp  Rgain.hpp  Rgraphics.hpp  Rimg_file.hpp  Rlayer.hpp  Rmedia_creator.hpp  Rmedia_file.hpp  Rrothombus.hpp  Rtext.hpp  Rtransform.hpp  Rvideo_file.hpp  Scaler.hpp  ShapeRenderer.hpp  Transform.hpp  VideoFileDeserializer.hpp  VideoLoader.hpp  imgc_full.hpp  pipeline_names.hpp
src/: Dcropdata.cpp  Dgraphics.cpp  FFmpegLogger.cpp  MediaDecoder.cpp  MediaEncoder.cpp  RImgFile.cpp  Ralign2d.cpp  Rauto_align2d.cpp  Rcolor.cpp  Rcropdata.cpp  Rcropdata_combined.cpp  Rdirectional_blur.cpp  Rgain.cpp  Rgraphics.cpp  Rimg_file.cpp  Rlayer.cpp  Rmedia_creator.cpp  Rmedia_file.cpp  Rrothumbus.cpp  Rtext.cpp  Rtransform.cpp  Rvideo_file.cpp  Scaler.cpp  ShapeRenderer.cpp  Transform.cpp  VideoFileDeserializer.cpp  VideoFileDeserializer.hpp  VideoLoader.cpp  imgc-index.cpp
tests/: extraction.cpp
